linear-dafny/Test/concurrency/Mutex.dfy.expect
Mutex.dfy(50,33): Error: linear variable <<handle>> is unavailable here
1 resolution/type errors detected in Mutex.dfy
